--- a/src/.env.example
+++ b/src/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Guesthub
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:kJvEjX8EQbsa//S/eCNFegEeAkJdcGsNLk4ybWKu5dw=
 APP_DEBUG=true
 APP_URL=http://localhost:8080
 
