--- a/src/composer.json
+++ b/src/composer.json
@@ -12,7 +12,9 @@
         "php": "^8.4",
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.0",
-        "laravel/tinker": "^2.10.1"
+        "laravel/tinker": "^2.10.1",
+        "nyholm/psr7": "^1.8",
+        "symfony/psr-http-message-bridge": "^8.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
